--- a/Student-AdvancedAnimation/Flocking/mystyles.css
+++ b/Student-AdvancedAnimation/Flocking/mystyles.css
@@ -16,5 +16,31 @@ body{
 }
 
 .slider{
+  width: 25%;
   display:block;
+}
+
+.slider{
+  -webkit-apperance: none;
+  width:100%;
+  height: 25px;
+  background: #d3d3d3;
+  outline:none;
+  opacity: 0.9*;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb{
+  -webkit-apperance:none;
+  apperance:none;
+  width: 25px;
+  height: 25px;
+  background: #4CAF50;
+  cursor: :pointer;
+
 }
